# birdhouse

./: README.md  cors.json  docker-compose.yaml  record.sh
.github/workflows/: deploy_camera_server.yaml  deploy_crontab.yaml  deploy_database_migrations.yaml  deploy_relay.yaml  deploy_relay_database_migrations.yaml  deploy_reverse_ssh_tunnel.yaml  deploy_web.yaml  run_ansible.yaml
admin/: main.py  pyproject.toml
api/: Dockerfile  main.py  pyproject.toml
common/: alembic.ini  pyproject.toml
common/migrations/: env.py
common/migrations/versions/: 0c15dc86abf1_update_tables_for_postgres.py  39369256f2ca_remove_register_table.py  939e7621de8a_create_devices_table.py
common/src/common/: firebase.py
common/src/common/auth/: exception.py  firebase.py  google.py  token.py
common/src/common/db/: models.py
deployment/: PI_SETUP.md  README.md  pyproject.toml
deployment/ansible/: inventory.yaml
deployment/ansible/playbooks/: caddy.yaml  camera_server.yaml  crontab.yaml  db.yaml  relay.yaml  reverse_ssh_tunnel.yaml
deployment/ansible/playbooks/pi/: caddy.yaml  camera_server.yaml  crontab.yaml  (+1 more)
deployment/initdb/: 01-create-databases.sql
docker/: Dockerfile.pi  Dockerfile.recorder  Dockerfile.relay  Dockerfile.web
pi/: Caddyfile  Dockerfile  caddy.sh  camera_server.sh  crontab.sh  crontab.txt  install_camera_server.sh  install_reverse_ssh_tunnel.sh  install_reverse_tunnel.sh  install_service.py  main.py  pyproject.toml  reverse_ssh_tunnel.sh  sensor.py  service.py  stream.py
recorder/: .env.template  Dockerfile  gcs.py  google_auth.py  main.py  models.py  pyproject.toml  record.sh  timelapse.py  update_cors.sh  upload.sh
recorder/migrations/: env.py
recorder/migrations/versions/: 15bdfb8dc7c9_optional_sensor_readings.py  173b78c47672_drop_roles.py  3b725fabfe2a_drop_email_uniqueness.py  46b0e06b0427_add_user_provider.py  6020521257c3_use_array_for_allowed_roles.py  7d2f4c4c2a1b_add_user_table.py  8d12fb62547b_add_recording_table.py  951a6fb50b58_create_register_table.py  a373bdd516ef_make_user_role_nullable.py  b9c2a1881a93_make_user_role_null_by_default.py  cacd5f4c54b1_add_allowed_roles_to_device_table.py  cd734da6c6d0_add_sensor_table.py  e612ce34098f_add_registration_table.py
recorder/src/: main.py  record.py
recorder/src/auth/: decode.py  firebase.py  google.py  types.py  verify.py
recorder/src/db/: models.py  queries.py
recorder/src/timelapse/: create_save.py  timelapse.py
relay/: .env.template  Caddyfile  Dockerfile  README.md  alembic.ini  caddy.sh  firebase.py  main.py  models.py  pyproject.toml  relay.sh
relay/migrations/: env.py
relay/migrations/versions/: 35a65cb21b44_add_device_table.py  4922a9351e37_add_register_table.py
web/: .env.local  .env.local.template  .gitignore  Dockerfile  index.html  package-lock.json  package.json
web/src/: app.html
web/src/lib/: Device.svelte  HLSPlayer.svelte  Loader.svelte  RecordButton.svelte  TemperatureChart.svelte  Video.svelte  VideoWithLoader.svelte  firebase.ts  kobbar.svelte  recorder.ts  relay.ts  request.ts
web/src/routes/: +layout.svelte  +page.svelte  +page.ts  layout.css
(+35 files in other folders)
