[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
service = "common.service:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
auth = [
    "firebase-admin>=7.1.0",
]
