[project]
name = "recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "common[auth,db]",
    "fastapi[standard]>=0.116.1",
    "ffmpeg-python>=0.2.0",
    "google-cloud-storage>=3.3.0",
    "pydantic-settings>=2.10.1",
]

[tool.uv.sources]
common = { path = "../common", editable = true }

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
