[project]
name = "recorder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.116.1",
    "ffmpeg-python>=0.2.0",
    "firebase-admin>=7.1.0",
    "google-auth>=2.40.3",
    "google-cloud-storage>=3.3.0",
    "psycopg[binary]>=3.2.13",
    "pydantic-settings>=2.10.1",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
