[project]
name = "relay"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "common[auth,db]",
    "fastapi[standard]>=0.116.1",
    "httpx>=0.28.1",
    "memoization>=0.4.0",
    "pydantic-settings>=2.10.1",
]

[tool.uv.sources]
common = { path = "../common", editable = true }
